tests/NormalTests/paczka1/small_fuzzy/40209749.err
Error in line 8: 3TNigg A629 93,6
Error in line 15: LjAYp1I A788 22,6
